hack to make buttons work better.  They now passthrough all clicks

--- a/ComicServer/app/views/app.scala.html
+++ b/ComicServer/app/views/app.scala.html
@@ -19,6 +19,7 @@
     <script src="@routes.Assets.at("appscripts/Views/SideBarView.js")"></script>
     <script src="@routes.Assets.at("appscripts/Views/PageView.js")"></script>
     <script src="@routes.Assets.at("appscripts/Views/ReaderView.js")"></script>
+    <script src="@routes.Assets.at("appscripts/Views/TouchControlsView.js")"></script>
     <script src="@routes.Assets.at("appscripts/Views/UserView.js")"></script>
     <script src="@routes.Assets.at("appscripts/Views/UsersView.js")"></script>
 
@@ -30,6 +31,7 @@
     <script type="text/template" id="PageTemplate">@Templates.PageTemplate()</script>
     <script type="text/template" id="UsersTemplate">@Templates.UsersTemplate()</script>
     <script type="text/template" id="UserTemplate">@Templates.UserTemplate()</script>
+    <script type="text/template" id="TouchControlsTemplate">@Templates.TouchControlsTemplate()</script>
 
     <script type="text/javascript">
 		var libraryJson = @Html(json);
