--- a/ComicServer/app/views/main.scala.html
+++ b/ComicServer/app/views/main.scala.html
@@ -88,6 +88,10 @@
                 </div>
             </div>
 
+            <div class = "touch-controls-container" id="touch-controls-container">
+
+            </div>
+
             <div class="scroll-container" >
                 <div class="container-fluid" id ="main-container">
 					    @content
