--- a/ComicServer/app/views/main.scala.html
+++ b/ComicServer/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String, name: String)(header: Html)(content: Html)
+@(title: String, name: String, roles: List[String])(header: Html)(content: Html)
 
 <!DOCTYPE html>
 
@@ -39,8 +39,14 @@
                             <ul class = "nav navbar-nav">
                                 <li><a class="navbar-brand" href="/">Web Slinger Comic Reader</a></li>
                                 <li><a class="navbar-brand" href="#library">Library</a></li>
-                                <li><a class="navbar-brand" href="#addModal" data-toggle="modal">Add</a></li>
-                                <li><a class="navbar-brand" href="#users">Users</a></li>
+                                @if(roles!=null && roles.contains("fileAdministrator")) {
+                                    <li><a class="navbar-brand" href="#addModal" data-toggle="modal">Add</a></li>
+                                    <li><a class="navbar-brand" href="/refreshLibrary">Refresh Library</a></li>
+                                }
+                                @if(roles!= null && roles.contains("userAdministrator")) {
+                                    <li><a class="navbar-brand" href="#users">Users</a></li>
+                                }
+
                                 <li style="display: none;"><a href="javascript:none;" title="Left arrow or k" id="prevPanel"><span class="glyphicon glyphicon-chevron-right"></span> Previous</a></li>
                                 <li style="display: none;"><a href="javascript:none;" title="Right arrow or j" id="nextPanel"><i class="glyphicon glyphicon-chevron-right"></i> Next</a></li>
                                 <li style="display: none;"><a href="javascript:none;" title="v key" id="fitVertical"><i class="fitVerticalButton glyphicon glyphicon-resize-vertical"></i> Fit Vertical</a></a></li>
@@ -73,8 +79,12 @@
                                     <ul class="dropdown-menu" role="menu">
                                         <li><a class="" href="/">home</a></li>
                                         <li><a class="" href="#library">Library</a></li>
-                                        <li><a class="" href="#addModal" data-toggle="modal">Add</a></li>
-                                        <li><a class="navbar-brand" href="#users">Users</a></li>
+                                        @if(roles!= null && roles.contains("fileAdministrator")) {
+                                            <li><a class="" href="#addModal" data-toggle="modal">Add</a></li>
+                                        }
+                                        @if(roles!=null && roles.contains("userAdministrator")) {
+                                            <li><a class="navbar-brand" href="#users">Users</a></li>
+                                        }
                                         <li><a class="" href="/logout">Logout</a></li>
                                     </ul>
                                 </li>                            <li class="pull-left" style="display: none;"><a href="javascript:none;" title="v key" id="fitVerticalxs"><i class="fitVerticalButton glyphicon glyphicon-resize-vertical"></i></a></a></li>
