--- a/ComicServer/app/views/app.scala.html
+++ b/ComicServer/app/views/app.scala.html
@@ -1,7 +1,7 @@
-@(json: String, name: String)
+@(json: String, name: String, roles: List[String])
 
 
-@main("Web Slinger Comic Reader", name){
+@main("Web Slinger Comic Reader", name, roles){
 
     <script src="@routes.Assets.at("javascripts/jquery.hotkeys.js")"></script>
     <script src="@routes.Assets.at("backbone.marionette/underscore.js")"></script>
