playing with double page

--- a/ComicServer/app/views/Templates/TouchControlsTemplate.scala.html
+++ b/ComicServer/app/views/Templates/TouchControlsTemplate.scala.html
@@ -1,5 +1,13 @@
 <div id="touch-controls no-pointer" class="">
-    <div class="horizontal-button-container horizontal-button-container-top no-pointer"><div id="topButton" class="tap-target tap-target-horizontal" >Toggle Top Bar</div></div>
+    <div class="horizontal-button-container horizontal-button-container-top no-pointer">
+        <div id="topButton" class="tap-target tap-target-horizontal" >Toggle Top Bar</div>
+        <div class = 'horizontal-button-container-sub no-pointer'>
+            <div id="rotateCWButton" class="tap-target tap-target-horizontal-third tap-target-blue no-pointer" >Rotate Clockwise</div>
+            <div id="toggleDoublePage" class="tap-target tap-target-horizontal-third no-pointer" >Toggle Double Page</div>
+            <div id="rotateCCWButton" class="tap-target tap-target-horizontal-third tap-target-blue no-pointer" >Rotate Counter Clockwise</div>
+        </div>
+    </div>
+
     <div class="horizontal-button-container horizontal-button-container-bottom no-pointer">
         <div class = 'horizontal-button-container-sub no-pointer'>
             <div id="fitVerticalButton" class="tap-target tap-target-horizontal-third tap-target-blue no-pointer" >Fit Vertical</div>
